--- a/wp-content/themes/oceanwp/assets/css/style.css
+++ b/wp-content/themes/oceanwp/assets/css/style.css
@@ -6400,17 +6400,17 @@ body.breadcrumbs-position-default .page-header-title {
   overflow: hidden;
 }
 
-.site-breadcrumbs ul {
+.site-breadcrumbs ol {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.site-breadcrumbs ul li {
+.site-breadcrumbs ol li {
   display: inline-block;
 }
 
-.site-breadcrumbs ul li .breadcrumb-sep {
+.site-breadcrumbs ol li .breadcrumb-sep {
   margin: 0 6px;
 }
 
