--- a/wp-content/themes/oceanwp/assets/css/woo/hover-style.css
+++ b/wp-content/themes/oceanwp/assets/css/woo/hover-style.css
@@ -9,26 +9,26 @@ Woo Hover Style
   margin-left: auto;
 }
 
-.woocommerce ul.products li.product {
+.woocommerce ul.products li.product:not(.product-category) {
   overflow: inherit;
   padding-bottom: 0;
 }
 
-.woocommerce ul.products li.product .product-inner li.image-wrap {
+.woocommerce ul.products li.product:not(.product-category) .product-inner li.image-wrap {
   overflow: hidden;
   z-index: 1;
   margin-bottom: 0;
 }
 
-.woocommerce ul.products li.product .tinv-wraper.tinv-wishlist {
+.woocommerce ul.products li.product:not(.product-category) .tinv-wraper.tinv-wishlist {
   display: none;
 }
 
-.woocommerce ul.products li.product .image-wrap .tinv-wraper.tinv-wishlist {
+.woocommerce ul.products li.product:not(.product-category) .image-wrap .tinv-wraper.tinv-wishlist {
   display: inline-block;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons {
   position: absolute;
   right: 15px;
   top: 15px;
@@ -36,7 +36,7 @@ Woo Hover Style
   z-index: 99;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li {
   margin-bottom: 10px;
   opacity: 0;
   -webkit-transform: translatex(25px);
@@ -51,15 +51,15 @@ Woo Hover Style
   transition: all 0.4s;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li:last-child {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li:last-child {
   margin-bottom: 0;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li.woo-wishlist-btn {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li.woo-wishlist-btn {
   font-size: 0;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li:nth-child(2) {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li:nth-child(2) {
   -webkit-transition-delay: 0.15s;
   -moz-transition-delay: 0.15s;
   -ms-transition-delay: 0.15s;
@@ -67,17 +67,17 @@ Woo Hover Style
   transition-delay: 0.15s;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li .tinv-wishlist .tinvwl_add_to_wishlist_button.tinvwl-icon-heart:before, .woocommerce ul.products li.product .woo-entry-buttons li .woocommerce ul.products li.product a.tinvwl-button.tinvwl_add_to_wishlist_button.tinvwl-icon-heart:before, .woocommerce ul.products li.product .woo-entry-buttons li .woocommerce-page ul.products li.product a.tinvwl-button.tinvwl-icon-heart.tinvwl_add_to_wishlist_button:before, .woocommerce ul.products li.product .woo-entry-buttons li a.sidr-class-wishlist_products_counter.sidr-class-top_wishlist-heart:before, .woocommerce ul.products li.product .woo-entry-buttons li a.wishlist_products_counter.top_wishlist-heart:before, .woocommerce ul.products li.product .woo-entry-buttons li span.wishlist_products_counter.top_wishlist-heart:before {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li .tinv-wishlist .tinvwl_add_to_wishlist_button.tinvwl-icon-heart:before, .woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li .woocommerce ul.products li.product a.tinvwl-button.tinvwl_add_to_wishlist_button.tinvwl-icon-heart:before, .woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li .woocommerce-page ul.products li.product a.tinvwl-button.tinvwl-icon-heart.tinvwl_add_to_wishlist_button:before, .woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li a.sidr-class-wishlist_products_counter.sidr-class-top_wishlist-heart:before, .woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li a.wishlist_products_counter.top_wishlist-heart:before, .woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li span.wishlist_products_counter.top_wishlist-heart:before {
   font-size: inherit;
   margin: 0;
   vertical-align: inherit;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li .tinvwl_add_to_wishlist-text {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li .tinvwl_add_to_wishlist-text {
   display: none;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li .tinv-wraper.tinv-wishlist {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li .tinv-wraper.tinv-wishlist {
   position: relative;
   top: auto;
   right: auto;
@@ -87,7 +87,7 @@ Woo Hover Style
   opacity: 1;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li a {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li a {
   display: block;
   font-size: 18px;
   font-weight: 400;
@@ -108,11 +108,11 @@ Woo Hover Style
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li a:hover {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li a:hover {
   color: #13aff0;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li a.owp-quick-view {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li a.owp-quick-view {
   position: relative;
   bottom: auto;
   left: auto;
@@ -122,7 +122,7 @@ Woo Hover Style
   visibility: visible;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li a.owp-quick-view i {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li a.owp-quick-view i {
   font-size: inherit;
   font-weight: inherit;
   margin: 0;
@@ -130,8 +130,8 @@ Woo Hover Style
   margin-top: 0;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li a i,
-.woocommerce ul.products li.product .woo-entry-buttons li a a:before {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li a i,
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li a a:before {
   opacity: 1;
   -webkit-transition: opacity 0.2s ease;
   -moz-transition: opacity 0.2s ease;
@@ -140,7 +140,7 @@ Woo Hover Style
   transition: opacity 0.2s ease;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li a:after {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li a:after {
   content: '';
   position: absolute;
   top: 50%;
@@ -162,12 +162,12 @@ Woo Hover Style
   transition: opacity 0.2s ease;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li.loading i,
-.woocommerce ul.products li.product .woo-entry-buttons li.loading a:before {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li.loading i,
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li.loading a:before {
   opacity: 0;
 }
 
-.woocommerce ul.products li.product .woo-entry-buttons li.loading a:after {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li.loading a:after {
   opacity: 1;
   -ms-animation: loader 450ms infinite linear;
   -webkit-animation: loader 450ms infinite linear;
@@ -176,7 +176,7 @@ Woo Hover Style
   animation: loader 450ms infinite linear;
 }
 
-.woocommerce ul.products li.product .product-inner:hover .woo-entry-buttons li {
+.woocommerce ul.products li.product:not(.product-category) .product-inner:hover .woo-entry-buttons li {
   opacity: 1;
   -webkit-transform: translatex(0);
   -moz-transform: translatex(0);
@@ -185,7 +185,7 @@ Woo Hover Style
   transform: translatex(0);
 }
 
-.woocommerce ul.products li.product .image-wrap .button {
+.woocommerce ul.products li.product:not(.product-category) .image-wrap .button {
   display: block;
   position: absolute;
   bottom: 0;
@@ -212,16 +212,16 @@ Woo Hover Style
   transition: all 0.6s;
 }
 
-.woocommerce ul.products li.product .image-wrap .button:hover {
+.woocommerce ul.products li.product:not(.product-category) .image-wrap .button:hover {
   background-color: #0b7cac;
   color: #ffffff;
 }
 
-.woocommerce ul.products li.product .product-inner .added_to_cart {
+.woocommerce ul.products li.product:not(.product-category) .product-inner .added_to_cart {
   display: none;
 }
 
-.woocommerce ul.products li.product .product-inner:hover .button {
+.woocommerce ul.products li.product:not(.product-category) .product-inner:hover .button {
   -webkit-transform: translateY(0);
   -moz-transform: translateY(0);
   -ms-transform: translateY(0);
@@ -229,7 +229,7 @@ Woo Hover Style
   transform: translateY(0);
 }
 
-.woocommerce ul.products li.product .product-inner {
+.woocommerce ul.products li.product:not(.product-category) .product-inner {
   z-index: 1;
   -webkit-transition: all 0.6s ease;
   -moz-transition: all 0.6s ease;
@@ -238,20 +238,20 @@ Woo Hover Style
   transition: all 0.6s ease;
 }
 
-.woocommerce ul.products li.product .product-inner li {
+.woocommerce ul.products li.product:not(.product-category) .product-inner li {
   margin-top: 12px;
   margin-bottom: 0;
 }
 
-.woocommerce ul.products li.product .product-inner li.title, .woocommerce ul.products li.product .product-inner li:first-child {
+.woocommerce ul.products li.product:not(.product-category) .product-inner li.title, .woocommerce ul.products li.product:not(.product-category) .product-inner li:first-child {
   margin-top: 0;
 }
 
-.woocommerce ul.products li.product .product-inner li.woo-desc {
+.woocommerce ul.products li.product:not(.product-category) .product-inner li.woo-desc {
   margin-top: 10px;
 }
 
-.woocommerce ul.products li.product .woo-entry-image a:after {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-image a:after {
   content: '';
   position: absolute;
   top: 50%;
@@ -273,7 +273,7 @@ Woo Hover Style
   transition: opacity 0.2s ease;
 }
 
-.woocommerce ul.products li.product .woo-entry-image a.loading:after {
+.woocommerce ul.products li.product:not(.product-category) .woo-entry-image a.loading:after {
   opacity: 1;
   -ms-animation: loader 450ms infinite linear;
   -webkit-animation: loader 450ms infinite linear;
@@ -282,7 +282,7 @@ Woo Hover Style
   animation: loader 450ms infinite linear;
 }
 
-.woocommerce ul.products li.product .woo-product-info {
+.woocommerce ul.products li.product:not(.product-category) .woo-product-info {
   position: relative;
   background-color: #fff;
   padding: 20px 15px;
@@ -290,7 +290,7 @@ Woo Hover Style
   z-index: 1;
 }
 
-.woocommerce ul.products li.product .woo-product-gallery {
+.woocommerce ul.products li.product:not(.product-category) .woo-product-gallery {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -309,31 +309,31 @@ Woo Hover Style
   transition: all 0.6s ease;
 }
 
-.woocommerce ul.products li.product .woo-product-gallery a {
+.woocommerce ul.products li.product:not(.product-category) .woo-product-gallery a {
   display: block;
   position: relative;
   border: 1px solid transparent;
 }
 
-.woocommerce ul.products li.product .woo-product-gallery .active a,
-.woocommerce ul.products li.product .woo-product-gallery a:hover {
+.woocommerce ul.products li.product:not(.product-category) .woo-product-gallery .active a,
+.woocommerce ul.products li.product:not(.product-category) .woo-product-gallery a:hover {
   border-color: #13aff0;
 }
 
-.woocommerce ul.products li.product .product-inner:hover .woo-product-gallery {
+.woocommerce ul.products li.product:not(.product-category) .product-inner:hover .woo-product-gallery {
   left: -90px;
   opacity: 1;
   visibility: visible;
 }
 
-.woocommerce ul.products li.product .product-inner:hover:before {
+.woocommerce ul.products li.product:not(.product-category) .product-inner:hover:before {
   left: -90px;
   -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
-.woocommerce ul.products li.product .product-inner:before {
+.woocommerce ul.products li.product:not(.product-category) .product-inner:before {
   position: absolute;
   content: '';
   top: 0;
@@ -406,13 +406,13 @@ Woo Hover Style
 }
 
 /* RTL */
-body.rtl.woocommerce ul.products li.product .product-inner:hover,
-body.rtl .woocommerce ul.products li.product .product-inner:hover {
+body.rtl.woocommerce ul.products li.product:not(.product-category) .product-inner:hover,
+body.rtl .woocommerce ul.products li.product:not(.product-category) .product-inner:hover {
   z-index: 2;
 }
 
-body.rtl.woocommerce ul.products li.product .product-inner:hover .woo-entry-buttons li,
-body.rtl .woocommerce ul.products li.product .product-inner:hover .woo-entry-buttons li {
+body.rtl.woocommerce ul.products li.product:not(.product-category) .product-inner:hover .woo-entry-buttons li,
+body.rtl .woocommerce ul.products li.product:not(.product-category) .product-inner:hover .woo-entry-buttons li {
   -webkit-transform: translatex(0);
   -moz-transform: translatex(0);
   -ms-transform: translatex(0);
@@ -420,14 +420,14 @@ body.rtl .woocommerce ul.products li.product .product-inner:hover .woo-entry-but
   transform: translatex(0);
 }
 
-body.rtl.woocommerce ul.products li.product .woo-entry-buttons,
-body.rtl .woocommerce ul.products li.product .woo-entry-buttons {
+body.rtl.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons,
+body.rtl .woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons {
   left: 15px;
   right: auto;
 }
 
-body.rtl.woocommerce ul.products li.product .woo-entry-buttons li,
-body.rtl .woocommerce ul.products li.product .woo-entry-buttons li {
+body.rtl.woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li,
+body.rtl .woocommerce ul.products li.product:not(.product-category) .woo-entry-buttons li {
   -webkit-transform: translatex(-25px);
   -moz-transform: translatex(-25px);
   -ms-transform: translatex(-25px);
@@ -435,26 +435,26 @@ body.rtl .woocommerce ul.products li.product .woo-entry-buttons li {
   transform: translatex(-25px);
 }
 
-body.rtl.woocommerce ul.products li.product .image-wrap .button,
-body.rtl .woocommerce ul.products li.product .image-wrap .button {
+body.rtl.woocommerce ul.products li.product:not(.product-category) .image-wrap .button,
+body.rtl .woocommerce ul.products li.product:not(.product-category) .image-wrap .button {
   right: 0;
   left: auto;
 }
 
-body.rtl.woocommerce ul.products li.product .woo-product-gallery,
-body.rtl .woocommerce ul.products li.product .woo-product-gallery {
+body.rtl.woocommerce ul.products li.product:not(.product-category) .woo-product-gallery,
+body.rtl .woocommerce ul.products li.product:not(.product-category) .woo-product-gallery {
   right: 0;
   left: auto;
 }
 
-body.rtl.woocommerce ul.products li.product .product-inner:hover .woo-product-gallery,
-body.rtl .woocommerce ul.products li.product .product-inner:hover .woo-product-gallery {
+body.rtl.woocommerce ul.products li.product:not(.product-category) .product-inner:hover .woo-product-gallery,
+body.rtl .woocommerce ul.products li.product:not(.product-category) .product-inner:hover .woo-product-gallery {
   right: -90px;
   left: 0;
 }
 
-body.rtl.woocommerce ul.products li.product .product-inner:hover:before,
-body.rtl .woocommerce ul.products li.product .product-inner:hover:before {
+body.rtl.woocommerce ul.products li.product:not(.product-category) .product-inner:hover:before,
+body.rtl .woocommerce ul.products li.product:not(.product-category) .product-inner:hover:before {
   right: -90px;
   left: 0;
 }
@@ -475,10 +475,10 @@ body.rtl .products .product .tinv-wraper.tinv-wishlist {
 
 /* Responsive */
 @media only screen and (max-width: 1500px) {
-  .woocommerce ul.products li.product .product-inner:hover .woo-product-gallery {
+  .woocommerce ul.products li.product:not(.product-category) .product-inner:hover .woo-product-gallery {
     display: none;
   }
-  .woocommerce ul.products li.product .product-inner:hover:before {
+  .woocommerce ul.products li.product:not(.product-category) .product-inner:hover:before {
     left: 0;
     right: 0;
   }
