--- a/wp-content/themes/oceanwp/inc/customizer/controls/general.css
+++ b/wp-content/themes/oceanwp/inc/customizer/controls/general.css
@@ -30,7 +30,8 @@
 #customize-control-osh_no_shadow,
 #customize-control-osh_sticky_choose .customize-control-title,
 #customize-control-osp_side_panel_displace,
-#customize-control-osp_side_panel_overlay { margin-top: 0; }
+#customize-control-osp_side_panel_overlay,
+#customize-control-ocean_breadcrumb_show_title { margin-top: 0; }
 
 /* General tweaks */
 .wp-full-overlay-sidebar-content::-webkit-scrollbar, .accordion-section-content::-webkit-scrollbar { width: 5px !important; }
