--- a/wp-content/themes/oceanwp/sass/components/_page-header.scss
+++ b/wp-content/themes/oceanwp/sass/components/_page-header.scss
@@ -157,7 +157,7 @@ body.breadcrumbs-position-default .page-header-title {
   white-space: nowrap;
   overflow: hidden;
 
-  ul {
+  ol {
     margin: 0;
     padding: 0;
     list-style: none;
